Fixes #2061 for Tabsheets - Changing tab should no longer flicker in FF
svn changeset:5801/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1997,21 +1997,13 @@ input.i-modified,
 
 /* Progress indication */
 
-.i-tabsheet-loading .i-tabsheet-tabs .i-tabsheet-tabitem-selected span {
+.i-tabsheet-loading .i-tabsheet-tabs .i-tabsheet-tabitem-selected .i-caption .i-captiontext {
 	background: transparent url(common/img/ajax-loader.gif) no-repeat;
-	display: block;
 	margin-left: -10px;
 	padding-left: 10px;
 	margin-top: -12px;
 	padding-top: 12px;
 }
-
-.i-tabsheet-loading .i-tabsheet-content * {
-	visibility: hidden;
-	overflow: hidden;
-}
-
-
 
 
 /* IE specific styles */
